--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,23 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* HEADER */
+
 .header {
   background-color: #f1f1f1;
   padding: 30px;
   text-align: center;
 }
+
+/* FOOTER */
+
+.footer {
+  background-color: #F1F1F1;
+  text-align: center;
+  padding: 10px;
+}
+
+/* NAVBAR */
 
 #navbar {
   overflow: hidden;
@@ -34,13 +46,14 @@ body {
   color: black;
 }
 
-
 #navbar a.active {
   background-color: #d6d7d6;
   color: black;
 }
 
 .topnav-right {float: right;}
+
+/* BUTTONS */
 
 .button {
 background-color: white;
@@ -58,4 +71,42 @@ cursor: pointer;
 .button:hover {
   background-color: black;
   color: white
+}
+
+/* COLUMNS*/
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  background-color: #f1f1f1;
+  padding-left: 20px;
+}
+
+
+/* RESPONSIVE LAYOUTS*/
+
+/* columns -- Responsive layout - when the screen is less than 800px wide,
+make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+/* navbar-- Responsive layout - when the screen is less than 400px wide,
+make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .topnav a {
+    float: none;
+    width: 100%;
+  }
 }
