--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 /* FOOTER */
 
 .footer {
-  background-color: #F1F1F1;
+  background-color: black;
   text-align: center;
   padding: 10px;
 }
@@ -77,7 +77,7 @@ cursor: pointer;
 
 /* Create two unequal columns that floats next to each other */
 /* Left column */
-.leftcolumn {   
+.leftcolumn {
   float: left;
   width: 75%;
 }
