--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* HEADER */
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+/* HEADER (i dont have one) */
 
 .header {
   background-color: #f1f1f1;
@@ -16,9 +24,10 @@ body {
 /* FOOTER */
 
 .footer {
+  color: white;
   background-color: black;
   text-align: center;
-  padding: 10px;
+  height: 100px;
 }
 
 /* NAVBAR */
@@ -29,6 +38,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index:1000;//add z-index
 }
 
 #navbar a {
@@ -84,9 +94,9 @@ cursor: pointer;
 
 /* Right column */
 .rightcolumn {
-  float: left;
+  float: right;
   width: 35%;
-  background-color: #f1f1f1;
+  text-align: center;
   padding-left: 20px;
 }
 
