--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body {
   margin: 0;
-  font-size: 16px;
+  font-size: 24px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -17,9 +17,7 @@ h3 {
   text-align: center;
 }
 
-div {
-  padding-left: 50px
-}
+div {font-size: medium;}
 
 /* HEADER (i dont have one) */
 
@@ -74,7 +72,7 @@ div {
 background-color: white;
 border: 2px solid black;
 color: black;
-padding: 16px 16px;
+padding: 15px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
@@ -95,6 +93,7 @@ cursor: pointer;
 .leftcolumn {
   float: left;
   width: 65%;
+  padding-left: 50px;
 }
 
 /* Right column */
@@ -102,7 +101,14 @@ cursor: pointer;
   float: right;
   width: 35%;
   text-align: center;
-  padding-left: 20px;
+  padding-left: 50px;
+}
+
+/* Three image containers */
+.imgcolumn {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
 }
 
 /* FOOTER COLUMNS */
