--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ font-family: Arial, Helvetica, sans-serif;}
   text-align: right;
   padding: 18px 18px;
   text-decoration: none;
+  font-family: Georgia, serif;
   font-size: 16px;
 }
 
