--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ font-family: Arial, Helvetica, sans-serif;}
   text-align: center;
 }
 
-.pages {padding: 30px}
+p.padding {padding-left: 50px;}
 
 
 /* FOOTER */
