--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ h1 {
 
 h2 {
   text-align: center;
+  font-family: Georgia, serif
 }
 
 h3 {
@@ -23,7 +24,8 @@ font-family: Arial, Helvetica, sans-serif;}
   text-align: center;
 }
 
-p.padding {padding-left: 50px;}
+p.padding {padding-left: 50px;
+padding-right: 50px;}
 
 
 /* FOOTER */
