--- a/styles.css
+++ b/styles.css
@@ -116,11 +116,17 @@ cursor: pointer;
 
 /* FOOTER COLUMNS */
 
-/* Create three equal columns that floats next to each other */
+/* Create two equal columns that floats next to each other */
 .column {
   float: left;
   width: 50%;
   padding: 15px;
+}
+
+.vendorcolumn {
+  float: left;
+  width: 25%;
+  padding: 10px;
 }
 
 /* Clear floats after the columns */
@@ -135,7 +141,7 @@ cursor: pointer;
 /* columns -- Responsive layout - when the screen is less than 800px wide,
 make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {
+  .leftcolumn, .rightcolumn, .column, .vendorcolumn {
     width: 100%;
     padding: 0;
   }
