--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,17 @@ h1 {
 
 h2 {
   text-align: center;
+  font-family: Georgia, serif;
 }
 
 h3 {
   text-align: center;
+  font-family: Georgia, serif;
+}
+
+h4 {
+  text-align: center;
+  font-family: Georgia, serif;
 }
 
 div {font-size: medium;
@@ -34,6 +41,7 @@ font-family: Georgia, serif;}
 p.padding {padding-left: 50px;
 padding-right: 50px;}
 
+p.small {font-size: small;}
 
 /* FOOTER */
 
