trying to fix navbar
changed block to inline-block

--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ make the navigation links stack on top of each other instead of next to each oth
   #navbar a {display: none;}
   #navbar a.icon {
     float: left;
-    display: block;
+    display: inline-block;
   }
 }
 
