--- a/styles.css
+++ b/styles.css
@@ -45,11 +45,10 @@ p.small {font-size: small;}
 
 /* FOOTER */
 
-.footer {
+footer {
   color: white;
   background-color: black;
   text-align: center;
-  height: 170px;
   padding: 10px;
 }
 
@@ -143,6 +142,12 @@ cursor: pointer;
   padding: 15px;
 }
 
+.footercolumn {
+  float: left;
+  width: 50%;
+  padding: 15px;
+}
+
 .vendorcolumn {
   float: left;
   width: 25%;
@@ -166,6 +171,14 @@ make the two columns stack on top of each other instead of next to each other */
     padding: 0;
   }
 }
+
+@media screen and (max-width: 200px) {
+  .footercolumn {
+    width: 100%;
+    padding: 0;
+  }
+}
+
 
 /* navbar-- Responsive layout - when the screen is less than 980px wide,
 make the navigation links stack on top of each other instead of next to each other */
