--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,4 @@
 
-@font-face {
-  font-family: "puzzled";
-  src: url(Gotham-Light copy.otf);
-}
-
-h1 {
-  text-align: center;
-  font-family: Georgia, serif;
-}
-
-h2 {
-  text-align: center;
-  font-family: Georgia, serif;
-}
-
-h3 {
-  text-align: center;
-  font-family: 'Lora', serif;
-}
-
-h4 {
-  text-align: center;
-  font-family: 'Lora', serif;
-}
-
-div {font-size: medium;
-  font-family: 'Lora', serif;}
-
-p {font-family: 'Lora', serif;}
-
-
-.puzzled {font-family: "puzzled", Georgia, serif;}
-
-
 /* HEADER (i dont have one) */
 
 .header {
@@ -79,7 +45,7 @@ footer.column {
   text-align: right;
   padding: 18px 18px;
   text-decoration: none;
-  font-family: Georgia, serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
 }
 
@@ -105,7 +71,8 @@ padding: 15px;
 text-align: center;
 text-decoration: none;
 display: inline-block;
-font-family: Georgia, serif;
+font-family: 'Montserrat', sans-serif;
+font-weight: bold;
 font-size: 18px;
 margin: 2px 2px;
 cursor: pointer;
