--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ padding-right: 50px;}
 
 p.small {font-size: small;}
 
+p.left {text-align: left;}
+
+
 /* FOOTER */
 
 footer {
@@ -102,6 +105,20 @@ cursor: pointer;
   padding-left: 50px;
 }
 
+.leftcolumnsponsor {
+  float: left;
+  width: 33%;
+  text-align: center;
+  padding: 0px 25px;
+}
+.rightcolumnsponsor {
+ float: right;
+ width: 67%;
+ text-align: left;
+ padding-right: 50px;
+}
+
+
 /* Three image containers */
 .imgcolumn {
   float: left;
@@ -118,6 +135,7 @@ cursor: pointer;
   width: 50%;
   padding: 15px;
 }
+
 
 .aboutcolumn {
   float: left;
@@ -144,6 +162,13 @@ cursor: pointer;
 make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 1100px) {
   .aboutcolumn {
+    width: 100%;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .rightcolumnsponsor, .leftcolumnsponsor {
     width: 100%;
     padding: 0;
   }
