--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,6 @@ cursor: pointer;
   padding: 15px;
 }
 
-
 .aboutcolumn {
   float: left;
   width: 50%;
@@ -187,7 +186,7 @@ make the two columns stack on top of each other instead of next to each other */
 }
 
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn, .column, .vendorcolumn, .leftcolumnvendor, .rightcolumnvendor {
+  .leftcolumn, .rightcolumn, .column, .vendorcolumn, .leftcolumnvendor, .rightcolumnvendor, .video {
     width: 100%;
     padding: 0;
   }
@@ -215,7 +214,7 @@ make the navigation links stack on top of each other instead of next to each oth
 }
 
 @media screen and (max-width: 980px) {
-  #navbar.responsive {position: relative;}
+  #navbar.responsive {position: fixed;}
   #navbar.responsive .icon {
     position: fixed;
     left: 0;
