--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ cursor: pointer;
   color: white
 }
 
+
 /* COLUMNS*/
 
 /* Create two unequal columns that floats next to each other */
@@ -146,6 +147,7 @@ cursor: pointer;
   float: left;
   width: 50%;
   padding: 15px;
+  object-fit: cover;
 }
 
 .aboutcolumn {
@@ -200,6 +202,7 @@ make the two columns stack on top of each other instead of next to each other */
   }
 }
 
+@media screen and (max-width: 600px) {.video {display: flex;}}
 
 /* navbar-- Responsive layout - when the screen is less than 980px wide,
 make the navigation links stack on top of each other instead of next to each other */
